--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
